moving to ionic2 RC0

--- a/admin/package.json
+++ b/admin/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ng-admin",
+  "name": "ng-admin-seed",
   "version": "1.0.0",
   "description": "Admin site for API",
   "main": "app.js",
