--- a/mobile-client/SeedProject/package.json
+++ b/mobile-client/SeedProject/package.json
@@ -10,7 +10,7 @@
     "emulate:before": "build",
     "deploy:before": "build",
     "build:before": "build",
-    "run:before": "build"
+    "run:before": "watch"
   },
   "dependencies": {
     "@angular/common": "2.0.0",
